--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </head>
     <body>
         <div class="column" style="height: 100%;">
-            <div class="row" style="position: sticky; top: 0px; padding: 16px; background-color: #131314;">
+            <div class="row" style="position: fixed; top: 0px; padding: 16px; background-color: #131314;">
                 <span class="gradient" style="font-size: 24px; font-weight: 500; letter-spacing: -1px;">Tabby</span>
                 <span class="diluted">alpha</span>
             </div>
