--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="UTF-8">
+
+        <meta name="description" content="Tabby - experimentational LLM">
+        <meta name="keywords" content="llm, ai, neural network, language model">
+        <meta name="author" content="Myst33d">
+
+        <meta property="og:title" content="Tabby" />
+        <meta property="og:site_name" content="Tabby"/>
+        <meta property="og:description" content="Experimentational LLM" />
+        <meta property="og:image" content="https://notmyst33d.github.io/tabby/static/tabby.jpg" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="static/tabby.jpg">
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
